--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://user-images.githubusercontent.com/106701602/189211766-d4d63f26-dd61-4c4f-8779-37f975121097.jpg">  </p><br /><br />
+<div style="width:900px; position: relative; margin-left: auto; margin-right: auto;"> <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body>
 <BODY onLoad="alert('Bienvenido a mi Página Web. Disfruta el contenido');" onUnLoad="confirm('Gracias por tu visita, espero que no sea la última');">
 
     <link href="css/yyyy(1).css" rel="stylesheet">
