--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <BODY onLoad="alert('Bienvenido a mi Página Web. Disfruta el contenido');" onUnLoad="confirm('Gracias por tu visita, espero que no sea la última');">
-</p><br /><br />
+<body <style {
+  height: 800px;
+  background-image: url("https://carontestudio.com/img/caronte-web-estudio-logo.png");
+  background-size: cover;
+  background-size: 25rem;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+}> /></p><br /><br />
 <h3> </h3><br /><br />
 <p>     <em><strong><a target="_self" href="http://www.seba37.es.tl/" _fcksavedurl="http://www.seba37.es.tl">Subir Imágen</a></strong></em> </p><br /><br />
 <table><br /><br />
