--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <style>
   spinner {
-  border: 8px solid rgba(0, 0, 0, 0.1);
+  border: 8px solid rgba(5,161,157);
   border-left-color: #22a6b3;
   border-radius: 50%;
   width: 50px;
