--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </a>
             </li>
 
-            <li><a href="https://drive.google.com/file/d/14ztDf3-dWzt4OV__MhIXNxI8ck25-x6Z/view?usp=drivesdk" .="">Sobre</a></li>
+            <li><a href="#" .="">Sobre</a></li>
             
             <li><a href="#">Quem Somos</a></li>
             
@@ -175,7 +175,7 @@ O <style>
 display:block;
 margin:5px 0 0 5px;
 float:left;
-color:#FF3366;
+color:5,161,157;
 font-size:60px;
 font-family:Georgia;
 }
@@ -269,7 +269,7 @@ scrolldelay:9px;
 }
 
 #menu-h{
-    background-color: rgb(37, 37, 39);
+    background-color: rgb(5,161,157);
 }
 
 #menu-h ul {
