--- a/index.html
+++ b/index.html
@@ -445,13 +445,8 @@ body {
             }
         
 </style>
-  
-</div></div><script type="text/javascript" src="https://100widgets.com/stat.js.php"></script><iframe src="https://powered-by-revidy.com/b" style="width: 801px; height: 801px; border: 0px; position: absolute; left: -1000px;"></iframe>
-<iframe src="https://resistcorrectly.com/stat" style="width: 801px; height: 601px; border: 0px; position: absolute; left: -1000px;"></iframe>
-			<span id="Caja1" class="Caja1">faça clik na pagina pra colocar seu comentario<br /> </span> <textarea onclick_fckprotectedatt="%20onclick%3D%22copyCaja1(document.getElementById('code1'))%3Breturn%20false%3B%22" rows="3" cols="16" id="code1">coloque seu comentario
-			
-			
-			
+ 
+		<script src="//code.tidio.co/vnufgujzdpbqxs0zhsypemrv3ps7lkr6.js" async></script>	
 			
 			
 			</body></html>
