--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
                 <html><head></head><body onload="alert('Bem-vindo curte do conteudo');" onunload="confirm('Gracias por tu visita, espero que no sea la última');"><br><br>
 <div style="width:900px; position: relative; margin-left: auto; margin-right: auto;"> 
 
+  <meta property="fb:admins" content="458579663665,34852039495,34127890490"/>
   
-  
-
+<meta property="fb:admins" content="AQUI_VA_EL_USER_ID"/>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>Hello, World!</title>
    <link href="pavina de la profesora Ángela .css" rel="stylesheet" type="text/css">
@@ -448,5 +448,16 @@ body {
  
 		<script src="//code.tidio.co/vnufgujzdpbqxs0zhsypemrv3ps7lkr6.js" async></script>	
 			
+			
+			<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) {return;}
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_ES/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<div class="fb-comments" data-href="https://josemoises2007.github.io/josemoises2007/" data-num-posts="10" data-width="650"></div>
 			
 			</body></html>
