--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li><a href="#">Entrar</a></li>
         </ul>
     </nav>
-<video src="https://youtu.be/FuHcna7q15U" autoplay="true" muted="false" volume="100" loop="true" poster="https://user-images.githubusercontent.com/106701602/189475165-1d477fdd-165b-479f-a996-d470c8615410.mp4" <="" video="">
+<video src="https://user-images.githubusercontent.com/106701602/190274745-0b1fb6a5-119e-4e9f-88c4-f03410b0aa5a.mp4" autoplay="true" muted="false" volume="100" loop="true" poster="https://user-images.githubusercontent.com/106701602/189475165-1d477fdd-165b-479f-a996-d470c8615410.mp4" <="" video="">
   <section id="sect1" class="sect">
     <h1>Sección primera</h1>
   </section>
