--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@ Los problemas que tienes hoy, no pueden ser resueltos pensando de la misma maner
         </h2>
 </div>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<a href="https://api.whatsapp.com/send?phone=554499525323&amp;text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+<a href="https://api.whatsapp.com/send?phone=554499525323&amp;text=Hola%21%20Quero saber%20m%C3%A1s%20informação%C3%B3n%20do seu%20curso%202." class="float" target="_blank">
 <i class="fa fa-whatsapp my-float"></i>
 </a>
-      <a href="https://api.whatsapp.com/send?phone=5519999999999&amp;text=Texto%20aqui" target="_blank" style="position:fixed;bottom:20px;right:30px;">
+      <a href="https://api.whatsapp.com/send?phone=554499525323&amp;text=Texto%20aqui" target="_blank" style="position:fixed;bottom:20px;right:30px;">
     <img src="https://myfiles.space/user_files/127601_e31c146deadb8975/127601_custom_files/1663060943910.png?2499" alt="Contato pelo WhatsApp" style="
     width: 200px;
 ">
